# voice_rec

./: .gitignore  README.md
docker/: Dockerfile
voice_rec_project/: .env.example  Dockerfile  README.md  bot.py  docker-compose.yml  pyproject.toml
voice_rec_project/bot/: ai.py  bot.py
