[tool.poetry]
name = "voice-rec-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.15.0"
asyncio = "^3.4.3"
pydub = "^0.25.1"
vosk = "^0.3.45"
numpy = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
